Css element formatting and Horizontal scroll issue solved

--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,6 @@ figcaption {
 
 .work-container{
   clear:left;
-  width: 100%;
   margin-top: 10px;
   padding: .4rem;
   background-color: #eee;
