--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,7 +1,19 @@
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
+* {
+  box-sizing: border-box
+}
+
+body {
+  font-family: Verdana, 
+  sans-serif; margin:0
+}
+
+.mySlides {
+  display: none
+}
+
+img {
+  vertical-align: middle;
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -12,7 +24,8 @@ img {vertical-align: middle;}
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev, 
+.next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -33,7 +46,8 @@ img {vertical-align: middle;}
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
+.prev:hover, 
+.next:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
@@ -69,7 +83,8 @@ img {vertical-align: middle;}
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active, 
+.dot:hover {
   background-color: #717171;
 }
 
